Removed unnecessary condition in chooseTiles about coordinates.size()